-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 13, 14
-
Component/s: hotspot
-
b12
-
ppc, s390x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8230381 | 13.0.2 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8268942 | 11.0.13-oracle | Ludvig Janiuk | P3 | Resolved | Fixed | b01 |
| JDK-8230154 | 11.0.5 | Martin Doerr | P3 | Resolved | Fixed | b05 |
We have sporadically seen "assert(!(((ThreadShadow*)__the_thread__)->has_pending_exception())) failed: Should not have any exceptions pending" on s390 while running jtreg test "vmTestbase/nsk/jvmti/scenarios/capability/CM03/cm03t001".
The VM asserts that no exception is pending after a backedge counter overflow. The unexpected pending exception found in frequency_counter_overflow_inner is an instance of java.lang.ThreadDeath which got installed asynchronously by the test via JVMTI StopThread.
The VM call to InterpreterRuntime::build_method_counters misses an exception check in the s390 implementation. This is necessary for asynchronous exceptions which get installed by this test.
Stack:
V [libjvm.so+0xb78cd4] InterpreterRuntime::frequency_counter_overflow_inner(JavaThread*, unsigned char*)+0x1cc
V [libjvm.so+0xb79368] InterpreterRuntime::frequency_counter_overflow(JavaThread*, unsigned char*)+0x28
j nsk.jvmti.scenarios.capability.CM03.cm03t001Thread.waitUntilQuit()V+2
j nsk.jvmti.scenarios.capability.CM03.cm03t001Thread.delay()V+10
j nsk.jvmti.scenarios.capability.CM03.cm03t001Thread.run()V+35
The VM asserts that no exception is pending after a backedge counter overflow. The unexpected pending exception found in frequency_counter_overflow_inner is an instance of java.lang.ThreadDeath which got installed asynchronously by the test via JVMTI StopThread.
The VM call to InterpreterRuntime::build_method_counters misses an exception check in the s390 implementation. This is necessary for asynchronous exceptions which get installed by this test.
Stack:
V [libjvm.so+0xb78cd4] InterpreterRuntime::frequency_counter_overflow_inner(JavaThread*, unsigned char*)+0x1cc
V [libjvm.so+0xb79368] InterpreterRuntime::frequency_counter_overflow(JavaThread*, unsigned char*)+0x28
j nsk.jvmti.scenarios.capability.CM03.cm03t001Thread.waitUntilQuit()V+2
j nsk.jvmti.scenarios.capability.CM03.cm03t001Thread.delay()V+10
j nsk.jvmti.scenarios.capability.CM03.cm03t001Thread.run()V+35
- backported by
-
JDK-8230154 [s390, PPC64] Exception check missing in interpreter
-
- Resolved
-
-
JDK-8230381 [s390, PPC64] Exception check missing in interpreter
-
- Resolved
-
-
JDK-8268942 [s390, PPC64] Exception check missing in interpreter
-
- Resolved
-
- relates to
-
JDK-8232005 [s390, PPC64] More exception checks missing in interpreter
-
- Resolved
-