8229925: [s390, PPC64] Exception check missing in interpreter

Reviewed-by: dholmes, rrich